sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
	val length = getNombreValeurs();
	var i = length - 2;
	var j = 0;
	var swaped = true;
	while(i >= 0){
		swaped = false;
		for(j <- 0 to i){
			if(plusPetit(j + 1, j)){
				echange(j, j+1);
			}
		}
		i = i - 1;
		if(!swaped){
			break;
		}
	}
}
